--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+matplotlib==3.4.2
 numpy==1.20.2
-tqdm==4.59.0
+opencv_python==4.5.2.54
 torch==1.9.0
 torchvision==0.10.0
-matplotlib==3.4.2
+tqdm==4.59.0
